# qemu

./: hmp-commands-info.hx  meson.build
configs/devices/sparc-softmmu/: default.mak
disas/: alpha.c
hw/alpha/: Kconfig  am29f016.c  clipper.c  meson.build  rmc.c  tigbus.c  tigcontrol.c  trace-events  tsunami-internal.h  tsunami.c
hw/audio/: pcspk.c
hw/display/: Kconfig  cg14.c  cg14_template.h  meson.build  s3_vga.c  trace-events
hw/ide/: m1543.c  meson.build  trace-events
hw/input/: pckbd.c  ps2.c
hw/isa/: Kconfig  m1543.c  meson.build  trace-events
hw/pci/: pci-hmp-cmds.c  pci-qmp-cmds.c  pci.c
hw/pci-bridge/: dec_pci.c  meson.build
hw/pci-host/: raven.c
hw/ppc/: prep.c  prep_systemio.c
hw/rtc/: mc146818rtc.c
hw/scsi/: lsi53c895a.c
hw/sparc/: Kconfig  sun4m.c
hw/usb/: m1543-uhci-pci.c  meson.build
include/hw/alpha/: am29f016.h  rmc.h  tigbus.h  tigcontrol.h  tsunami-regs.h  tsunami.h
include/hw/pci/: pci.h  pci_host.h  pci_ids.h
include/hw/pci-bridge/: dec_pci.h
include/hw/rtc/: mc146818rtc.h
include/hw/southbridge/: m1543.h
include/monitor/: hmp.h
include/system/: system.h
qapi/: pci.json
system/: vl.c
